crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_parameter_assignment.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn bump(n: Number) { n += 1 }"
---
FnDecl {
    is_async: false,
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: "bump",
    },
    params: [
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Var(
                    "n",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 12,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 18,
                                        },
                                    },
                                    value: "Number",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
        },
    ],
    ret: None,
    where_clause: [],
    body: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 20,
                },
                end: Position {
                    line: 1,
                    column: 30,
                },
            },
            value: Block {
                stmts: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 22,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: Assign {
                            place: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 22,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                },
                                value: Place {
                                    root: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 23,
                                            },
                                        },
                                        value: "n",
                                    },
                                    steps: [],
                                },
                            },
                            op: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 24,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 26,
                                    },
                                },
                                value: Add,
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 27,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 28,
                                    },
                                },
                                value: Number(
                                    NumberLit {
                                        value: 1.0,
                                        text: "1",
                                    },
                                ),
                            },
                        },
                    },
                ],
                tail: None,
            },
        },
    ),
}
