crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_ret.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn name() String { \"x\" }"
---
FnDecl {
    is_async: false,
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: "name",
    },
    params: [],
    ret: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 17,
                                },
                            },
                            value: "String",
                        },
                    ],
                },
                args: [],
            },
        },
    ),
    where_clause: [],
    body: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 18,
                },
                end: Position {
                    line: 1,
                    column: 25,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 20,
                            },
                            end: Position {
                                line: 1,
                                column: 23,
                            },
                        },
                        value: Str(
                            "x",
                        ),
                    },
                ),
            },
        },
    ),
}
